--- a/app/components/verify-webrtc/template.hbs
+++ b/app/components/verify-webrtc/template.hbs
@@ -32,10 +32,10 @@
                 Videos
             </td>
             <td>
-                <video controls muted>{{answererToOfferer}}</video>
+                <video controls muted src={{answererToOfferer}}></video>
             </td>
             <td>
-                <video controls muted>{{offererToAnswerer}}</video>
+                <video controls muted src={{offererToAnswerer}}></video>
             </td>
         </tr>
 
