Extracted offerer and answerer into rtc_peer_connection

--- a/app/components/verify-webrtc/template.hbs
+++ b/app/components/verify-webrtc/template.hbs
@@ -32,10 +32,10 @@
                 Videos
             </td>
             <td>
-                <video controls muted src={{answererToOfferer}}></video>
+                <video controls muted src={{statsResult1.videoSrc}}></video>
             </td>
             <td>
-                <video controls muted src={{offererToAnswerer}}></video>
+                <video controls muted src={{statsResult2.videoSrc}}></video>
             </td>
         </tr>
 
