--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,7 +1,8 @@
 @import "colors.less";
 @import "menu_selector.less";
+@import "multi_chat.less";
 @import "verify_webrtc.less";
-@import  "public/assets/icon_font/icons.less";
+@import "public/assets/icon_font/icons.less";
 
 .text-center {
     text-align: center;
