--- a/app/styles/multi_chat.less
+++ b/app/styles/multi_chat.less
@@ -67,28 +67,28 @@ button[disabled], input[type=button][disabled] {
     text-shadow: none;
 }
 
-.icon {
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
+// .icon {
+//     width: 50px;
+//     height: 50px;
+//     background-repeat: no-repeat;
+//     background-position: center center;
+// }
 
-#allow-webcam {
-    background-image: url('images/webcam.png');
-}
-
-#allow-mic {
-    background-image: url('images/microphone.png');
-}
-
-#allow-screen {
-    background-image: url('images/screen.png');
-}
-
-#share-files {
-    background-image: url('images/share-files.png');
-}
+// #allow-webcam {
+//     background-image: url('images/webcam.png');
+// }
+//
+// #allow-mic {
+//     background-image: url('images/microphone.png');
+// }
+//
+// #allow-screen {
+//     background-image: url('images/screen.png');
+// }
+//
+// #share-files {
+//     background-image: url('images/share-files.png');
+// }
 
 #continue {
     border-top-left-radius: 0;
