--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,30 @@
+<h2 id="title">ember-webrtc-devices</h2>
+
+<p>This dummy page will request user media, in order to access names of devices,
+  then will re-enumerate devices and populate the select boxes.</p>
+
+<ul>
+  <li>audioCallCapable: {{webrtc.audioCallCapable}}</li>
+  <li>videoCallCapable: {{webrtc.videoCallCapable}}</li>
+  <li>callCapable: {{webrtc.callCapable}}</li>
+  <li>hasMicPermission: {{webrtc.hasMicPermission}}</li>
+  <li>hasMicrophone: {{webrtc.hasMicrophone}}</li>
+  <li>hasCameraPermission: {{webrtc.hasCameraPermission}}</li>
+  <li>hasCamera: {{webrtc.hasCamera}}</li>
+  <li>canListDevices: {{webrtc.canListDevices}}</li>
+</ul>
+
+<h3>Default</h3>
+{{device-selection}}
+
+
+<h3>With Troubleshoot link</h3>
+{{device-selection openTroubleshoot=(action "openTroubleshoot")}}
+
+<h3>No audio</h3>
+{{device-selection audio=false}}
+
+<h3>No video</h3>
+{{device-selection video=false}}
+
 {{outlet}}
