Lookup is functional, few things break on application template

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -19,12 +19,12 @@
 
 
 <h3>With Troubleshoot link</h3>
-{{device-selection openTroubleshoot=(action "openTroubleshoot")}}
+{{!-- {{device-selection openTroubleshoot="openTroubleshoot"}} --}}
 
 <h3>No audio</h3>
-{{device-selection audio=false}}
+{{!-- {{device-selection audio=false}} --}}
 
 <h3>No video</h3>
-{{device-selection video=false}}
+{{!-- {{device-selection video=false}} --}}
 
 {{outlet}}
