--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,4 +1,5 @@
 @import "colors.less";
+@import "device_list.less";
 @import "menu_selector.less";
 @import "multi_chat.less";
 @import "verify_webrtc.less";
