--- a/app/styles/menu_selector.less
+++ b/app/styles/menu_selector.less
@@ -29,7 +29,7 @@
     display: inline-block;
     padding: 2px 5px;
     vertical-align: top;
-    max-width: 85%;
+    // max-width: 85%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -46,7 +46,7 @@
     z-index: 100000;
     max-height: 500px;
     overflow-y: auto;
-    width: 95%;
+    // width: 95%;
 }
 .menu-selector.full-width .menu-selector-options{
   width:100%;
