--- a/app/styles/multi_chat.less
+++ b/app/styles/multi_chat.less
@@ -232,16 +232,16 @@ strong {
     font-weight: normal;
 }
 
-tr, td, th {
-    vertical-align: top;
-    padding: .7em 1.4em;
-    border-top: 1px dotted #BBA9A9;
-    border-right: 1px dotted #BBA9A9;
-}
+// tr, td, th {
+//     vertical-align: top;
+//     padding: .7em 1.4em;
+//     border-top: 1px dotted #BBA9A9;
+//     border-right: 1px dotted #BBA9A9;
+// }
 
-table {
-    width: 100%;
-}
+// table {
+//     width: 100%;
+// }
 
 // h1, h2 {
 //     border-bottom: 1px solid rgb(189, 189, 189);
