--- a/app/styles/device_list.less
+++ b/app/styles/device_list.less
@@ -1,7 +1,7 @@
 .ps-device-list {
     width: 75%:
     margin: 25px auto;
-    text-align: center;
+
     font-family: sans-serif;
     font-weight: 100;
 }
@@ -11,25 +11,30 @@
 }
 
 .ps-device-list-capabilities {
-    list-style: none;
+    width: 25%;
+    margin: 0 auto;
 }
 
 .ps-device-list-capabilities-item {
-
 }
 
 .ps-device-list-capabilities-item-label {
     font-size: 14px;
+    text-align: left;
+    border-bottom: 1px dotted gray;
+    padding: 2px 0px;
 }
 
 .ps-device-list-capabilities-item-value {
     font-weight: bold;
+    text-align: center;
+    border-bottom: 1px dotted gray;
+    padding: 2px 0px;
 }
 
 .ps-device-selection {
     width: 33%;
     margin: auto;
-    border-top: 1px solid gray;
     padding: 25px;
 }
 
