--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,7 +1,7 @@
 <div class="ps-device-list">
   <p class="ps-device-list-header-text text-center">
-    This dummy page will request user media, in order to access names of devices, <br />
-    then will re-enumerate devices and populate the select boxes.
+    This page requests user media in order to access names of devices, <br />
+    then re-enumerates devices and populates the select boxes.
   </p>
 
   <table class="ps-device-list-capabilities">
