--- a/app/components/verify-webrtc/template.hbs
+++ b/app/components/verify-webrtc/template.hbs
@@ -33,6 +33,8 @@
             </td>
             <td>
                 <video controls muted src={{statsResult1.videoSrc}}></video>
+                {{!-- <video controls muted src={{CAMERA_STREAM}}></video> --}}
+                {{!-- {{log "CAMERA_STREAM" CAMERA_STREAM}} --}}
             </td>
             <td>
                 <video controls muted src={{statsResult2.videoSrc}}></video>
