--- a/app/components/multi-chat/messages/template.hbs
+++ b/app/components/multi-chat/messages/template.hbs
@@ -1,7 +1,7 @@
 {{!-- // userinfoDIV.style.height = newMessageDIV.clientHeight + 'px'; --}}
 {{#each messages as |args|}}
   <div class="new-message">
-    <div class="user-info">{{args.userinfo}}</div> || '<img src="images/user.png">'</div>
+    <div class="user-info">{{args.userinfo}} || '<img src="images/user.png">'</div>
     <div class="user-activity">
       <h2 class="header">{{args.header}}</h2>
       <p class="message">{{args.message}}</p>
