--- a/app/multi-chat/template.hbs
+++ b/app/multi-chat/template.hbs
@@ -38,7 +38,7 @@
           Please Enter a <span style="color:red;">UNIQUE</span> room-name:
           <input type="text" id="room-name" placeholder="Private Room-ID" style="border: 1px solid rgb(253, 253, 253);box-shadow: inset 0 0 0 1px rgb(53, 52, 52);outline: 1px solid rgb(7, 7, 7);" title="Your private rooms unique-id. It is required!">
             {{roomname}}
-          </input>
+          {{!-- </input> --}}
           <br />
           <small>You can enter email; or any string or numbers!</small> <br />
 
