Removed multi-chat, ported file contents

--- a/app/components/skype-clone/main/template.hbs
+++ b/app/components/skype-clone/main/template.hbs
@@ -1,4 +1,8 @@
 <div class="main">
+    {{!-- NOTE: This should be in another controller/template... --}}
+    {{!-- {{skype-clone/messages
+        messages = messages}} --}}
+
     <div class="new-message" style="overflow: hidden;height: 250px;">
         <div class="user-info" style="height: 100%">
             <img src="images/user.png">
