--- a/app/components/skype-clone/users-list/template.hbs
+++ b/app/components/skype-clone/users-list/template.hbs
@@ -1,7 +1,6 @@
 <div class="users-list {{if isUsersContainerVisible "selected" ""}}" title="Click to view all shared screens and videos!" {{action "selectUsersList"}}>
   <div class="numbers-of-users">{{numberOfUsers}}</div>
-  <!-- Users -->
-  <img src="images/users.png">
+  Users
 </div>
 
 <div class="main-input-box">
