--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -4,6 +4,7 @@
 @import "multi_chat.less";
 @import "verify_webrtc.less";
 @import "public/assets/icon_font/icons.less";
+@import "skype_clone.less";
 
 .text-center {
     text-align: center;
