--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,7 +1,19 @@
-{{#skype-clone/users-list
+{{skype-clone/main}}
+
+{{!-- TODO: Navigate to new route after creating channel... --}}
+{{!-- That route should contain users list, settings... --}}
+
+{{!-- {{#skype-clone/users-list
     rtcMultiConnection = rtcMultiConnection}}
   {{skype-clone/settings
     rtcMultiConnection = rtcMultiConnection}}
 {{/skype-clone/users-list}}
 
-{{skype-clone/sound}}
+{{skype-clone/sound}} --}}
+
+{{!-- User Interface --}}
+{{!-- <script src="ui.main.js"> </script>
+<script src="ui.peer-connection.js"> </script>
+<script src="ui.share-files.js"> </script>
+<script src="ui.users-list.js"> </script> --}}
+{{!-- <script src="ui.settings.js"> </script> --}}
