--- a/app/styles/skype_clone.less
+++ b/app/styles/skype_clone.less
@@ -1,3 +1,62 @@
+/*
+// Muaz Khan         - www.MuazKhan.com
+// MIT License       - www.WebRTC-Experiment.com/licence
+// Experiments       - github.com/muaz-khan/WebRTC-Experiment
+*/
+
+/* @font-face {
+    font-family: 'Myriad';
+    src: url('//www.webrtc-experiment.com/fonts/MyriadPro-Light.otf') format("opentype");
+    font-weight: 400;
+} */
+
+/* body, body * {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    -webkit-user-drag: none;
+    font-family: Myriad, Arial, Verdana;
+}
+
+html {
+    background: rgb(247, 253, 244);
+}
+
+body {
+    border-right: 2px solid rgb(23, 228, 56);
+    border-left: 2px solid rgb(80, 238, 29);
+    margin: 0 2%;
+    background: white;
+    font-size: 1.2em;
+    line-height: 1.5em;
+}
+
+body {
+    padding: 30px 30px;
+} */
+
+.main {
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+.new-message {
+    min-height: 7em;
+    border-top: 1px solid black;
+}
+
+/* .new-message:first-child {
+    border-top: 0;
+} */
+
+.user-info {
+    width: 10em;
+    min-height: 7em;
+    float: left;
+    border-right: 1px solid black;
+    text-align: center;
+}
+
 .user-info img, .user-info video {
     width: 100%;
     height: 134px;
@@ -12,13 +71,20 @@
     padding: .4em .8em;
 }
 
+/* .header {
+} */
+
+/* .message {
+    padding: .6em .8em;
+} */
+
 .message img, .message iframe {
     width: 64%;
     border: 2px solid black;
     border-radius: 5px;
 }
 
-.main-input-box {
+/* .main-input-box {
     border: 1px solid black;
     border-bottom: 0;
     padding-bottom: 1px;
@@ -26,9 +92,9 @@
     margin-left: 193px;
     margin-right: 125px;
     padding-right: 21px;
-}
+} */
 
-.main-input-box textarea {
+/* .main-input-box textarea {
     border: 0;
     width: 100%;
     resize: none;
@@ -37,7 +103,7 @@
     font-family: inherit;
     padding-right: 177px;
     background: transparent;
-}
+} */
 
 button, .users-list
 {
@@ -51,14 +117,14 @@ button, .users-list
 	border-radius: 2px;
 	background-color: rgba(204, 60, 25, 0.63);
 }
-button:hover, .users-list:hover
+/* button:hover, .users-list:hover
 {
 	 background-color: rgba(204, 60, 25, 0.83);
-}
-button:active, .users-list:active
+} */
+/* button:active, .users-list:active
 {
      background-color: rgba(204, 60, 25, 0.9);
-}
+} */
 
 button[disabled], input[type=button][disabled] {
     background-color: transparent;
@@ -67,28 +133,28 @@ button[disabled], input[type=button][disabled] {
     text-shadow: none;
 }
 
-// .icon {
-//     width: 50px;
-//     height: 50px;
-//     background-repeat: no-repeat;
-//     background-position: center center;
-// }
+.icon {
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 
-// #allow-webcam {
-//     background-image: url('images/webcam.png');
-// }
-//
-// #allow-mic {
-//     background-image: url('images/microphone.png');
-// }
-//
-// #allow-screen {
-//     background-image: url('images/screen.png');
-// }
-//
-// #share-files {
-//     background-image: url('images/share-files.png');
-// }
+#allow-webcam {
+    background-image: url('images/webcam.png');
+}
+
+#allow-mic {
+    background-image: url('images/microphone.png');
+}
+
+#allow-screen {
+    background-image: url('images/screen.png');
+}
+
+#share-files {
+    background-image: url('images/share-files.png');
+}
 
 #continue {
     border-top-left-radius: 0;
@@ -96,12 +162,12 @@ button[disabled], input[type=button][disabled] {
     background-repeat: no-repeat;
     background-position: center right;
     background-image: url('images/action-needed.png');
-    padding-right: 47px;
+    /* padding-right: 47px;
 	padding-top: 1px;
-	padding-bottom: 4px;
+	padding-bottom: 4px; */
 }
 
-a {
+/* a {
     color: #2844FA;
     text-decoration: none;
 }
@@ -112,9 +178,9 @@ a:hover, a:focus {
 
 a:active {
     color: #000;
-}
+} */
 
-input {
+/* input {
     border-radius: 1px;
     border: 1px solid #d9d9d9;
     font-size: 15px;
@@ -127,14 +193,14 @@ input {
     -webkit-user-select: initial;
     -ms-user-select: initial;
     user-select: initial;
-}
+} */
 
-input[type=checkbox] {
+/* input[type=checkbox] {
     width: 30px;
     height: 30px;
     margin: 0;
     vertical-align: middle;
-}
+} */
 
 h1 {
     position: absolute;
@@ -220,11 +286,11 @@ h1 img {
     border-color: rgb(133, 21, 21);
 }
 
-.settings-panel {
+/* .settings-panel {
     height: auto;
     overflow: hidden;
     padding: .4em .8em;
-}
+} */
 
 strong {
     color: rgb(204, 14, 14);
@@ -232,24 +298,24 @@ strong {
     font-weight: normal;
 }
 
-// tr, td, th {
-//     vertical-align: top;
-//     padding: .7em 1.4em;
-//     border-top: 1px dotted #BBA9A9;
-//     border-right: 1px dotted #BBA9A9;
-// }
+tr, td, th {
+    vertical-align: top;
+    padding: .7em 1.4em;
+    border-top: 1px dotted #BBA9A9;
+    border-right: 1px dotted #BBA9A9;
+}
 
-// table {
-//     width: 100%;
-// }
+table {
+    width: 100%;
+}
 
-// h1, h2 {
-//     border-bottom: 1px solid rgb(189, 189, 189);
-//     display: inline;
-//     font-weight: normal;
-//     line-height: 36px;
-//     padding: 0 0 3px 0;
-// }
+h1, h2 {
+    border-bottom: 1px solid rgb(189, 189, 189);
+    display: inline;
+    font-weight: normal;
+    line-height: 36px;
+    padding: 0 0 3px 0;
+}
 
 select {
     border: 1px solid #d9d9d9;
@@ -280,87 +346,4 @@ small {
 	position: absolute;
 	margin: 0 18px;
 	color: red;
-}
-
-/*
-// Muaz Khan         - www.MuazKhan.com
-// MIT License       - www.WebRTC-Experiment.com/licence
-// Experiments       - github.com/muaz-khan/WebRTC-Experiment
-*/
-
-// textarea,input {
-//     font-size: 1em;
-// }
-
-script {
-    height: 0;
-    width: 0;
-    margin: 0;
-    padding: 0;
-}
-
-a,a:visited,a.cdchrm:visited {
-    text-decoration: none;
-    color: #0044cc;
-}
-
-a:hover,a.cdchrm:hover {
-    text-decoration: underline;
-}
-
-img {
-    border-width: 0;
-}
-
-hr {
-    color: #ccc;
-    background-color: #ccc;
-    height: 1px;
-    border-bottom-width: 0px;
-    border-top-width: 0px;
-    margin-bottom: 7px;
-}
-
-// * {
-//     scrollbar-base-color: white;
-//     scrollbar-track-color: white;
-//     scrollbar-darkshadow-color: white;
-//     scrollbar-3dlight-color: white;
-//     scrollbar-arrow-color: #757778;
-//     scrollbar-shadow-color: #bec1c4;
-//     scrollbar-highlight-color: #bec1c4;
-// }
-
-// ::-webkit-scrollbar {
-//     width: 15px;
-//     height: 15px;
-// }
-//
-// ::-webkit-scrollbar-track-piece {
-//     background-color: white;
-// }
-//
-// ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment,::-webkit-scrollbar-thumb {
-//     background-color: white;
-//     border: solid 1px #bec1c4;
-// }
-
-::-webkit-scrollbar-button:vertical:start:decrement {
-    background-image: url('images/scrollbar_arrow_up.gif');
-    background-position: center;
-}
-
-::-webkit-scrollbar-button:vertical:end:increment {
-    background-image: url('images/scrollbar_arrow_down.gif');
-    background-position: center;
-}
-
-::-webkit-scrollbar-button:horizontal:start:decrement {
-    background-image: url('images/scrollbar_arrow_left.gif');
-    background-position: center;
-}
-
-::-webkit-scrollbar-button:horizontal:end:increment {
-    background-image: url('images/scrollbar_arrow_right.gif');
-    background-position: center;
 }
