--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,19 +1,24 @@
-{{skype-clone/main}}
+<div class="main">
+    <div class="new-message" style="overflow: hidden;height: 250px;">
+        <div class="user-info" style="height: 100%">
+            <img src="images/user.png">
+        </div>
 
-{{!-- TODO: Navigate to new route after creating channel... --}}
-{{!-- That route should contain users list, settings... --}}
+        <div class="user-activity">
+            <p class="message">
+                Please enter a unique room-name:
+                {{input type="text" value=roomname placeholder="Channel Name" title="Channel name (required)" action=(action "keyUp")}}
+                <input type="text" id="room-name" placeholder="Channel Name" title="Channel name (required)"><br />
+                {{!-- <small style="color: rgb(1, 170, 143);font-style: italic;font-weight: bold;">You MUST <span style="color:red;">manually</span> share this <span style="color:red;">unique room-name</span> with target users so they can join you!</small> <br /><br /> --}}
 
-{{!-- {{#skype-clone/users-list
-    rtcMultiConnection = rtcMultiConnection}}
-  {{skype-clone/settings
-    rtcMultiConnection = rtcMultiConnection}}
-{{/skype-clone/users-list}}
+                Please Enter Your Full Name:
+                {{input type="text" value=username placeholder="(optional)" title="Optional but Recommended!"}}
+                {{!-- <input type="text" id="your-name" placeholder="(optional)" title="Optional but Recommended!"> --}}
 
-{{skype-clone/sound}} --}}
+                <button id="continue" title="Click to join the room!">continue</button>
+            </p>
+        </div>
+    </div>
+</div>
 
-{{!-- User Interface --}}
-{{!-- <script src="ui.main.js"> </script>
-<script src="ui.peer-connection.js"> </script>
-<script src="ui.share-files.js"> </script>
-<script src="ui.users-list.js"> </script> --}}
-{{!-- <script src="ui.settings.js"> </script> --}}
+{{!-- TODO: Navigate to chat route after creating channel... --}}
