--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,7 +1,7 @@
+@import "application.less";
 @import "colors.less";
 @import "device_list.less";
 @import "menu_selector.less";
-@import "multi_chat.less";
 @import "verify_webrtc.less";
 @import "public/assets/icon_font/icons.less";
 @import "skype_clone.less";
