--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,24 +1,29 @@
-<div class="main">
-    <div class="new-message" style="overflow: hidden;height: 250px;">
-        <div class="user-info" style="height: 100%">
-            <img src="images/user.png">
-        </div>
+<div class="channel-form">
+    <div class="channel-form-roomname">
+      <label for="roomname">Room Name:</label>
+      {{input
+        classNames="channel-form-input-text"
+        name="roomname"
+        type="text"
+        value=roomname
+        placeholder="Channel Name"
+        title="Channel name (required)"
+        action=(action "keyUp")}}
+    </div>
 
-        <div class="user-activity">
-            <p class="message">
-                Please enter a unique room-name:
-                {{input type="text" value=roomname placeholder="Channel Name" title="Channel name (required)" action=(action "keyUp")}}
-                <input type="text" id="room-name" placeholder="Channel Name" title="Channel name (required)"><br />
-                {{!-- <small style="color: rgb(1, 170, 143);font-style: italic;font-weight: bold;">You MUST <span style="color:red;">manually</span> share this <span style="color:red;">unique room-name</span> with target users so they can join you!</small> <br /><br /> --}}
+    <div class="channel-form-username">
+      <label for="username">Username:</label>
+      {{input
+        classNames="channel-form-input-text"
+        name="username"
+        type="text"
+        value=username
+        placeholder="(optional)"
+        title="Optional but Recommended!"}}
+    </div>
 
-                Please Enter Your Full Name:
-                {{input type="text" value=username placeholder="(optional)" title="Optional but Recommended!"}}
-                {{!-- <input type="text" id="your-name" placeholder="(optional)" title="Optional but Recommended!"> --}}
-
-                <button id="continue" title="Click to join the room!">continue</button>
-            </p>
-        </div>
+    <div class="button channel-form-submit" title="Click to join the room!" {{action "continue"}}>
+      Continue
     </div>
 </div>
-
 {{!-- TODO: Navigate to chat route after creating channel... --}}
