--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,7 +8,7 @@
         value=roomname
         placeholder="Channel Name"
         title="Channel name (required)"
-        action=(action "keyUp")}}
+        keyDown=(action "keyDown")}}
     </div>
 
     <div class="channel-form-username">
