--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -32,3 +32,12 @@
     margin: 10px auto;
     background-color: white;
 }
+
+.channel-form-warning {
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    border: 1px solid white;
+    background-color: #a00;
+    padding: 10px 0;
+}
