--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,4 +1,5 @@
 @import "application.less";
+@import "chat.less";
 @import "colors.less";
 @import "device_list.less";
 @import "menu_selector.less";
